test/pass/new-array.ditto
func new_array() -> array 2 int
    return [2;2];
end

func main()
end