test/fail/ast/func-in-func.ditto
func main()
    func other()
    end
end